mengubah index.html dari komputer

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Program GIT</h1>
-    <p>Hello Ismi Dzikrina</p>
+    <p>Hello Ismi Dzikrina ini latihan GIT</p>
+    <button>Welcome</button>
 </body>
 </html>
